# mnist-sae

./: .gitignore  analysis-distribution.ipynb  analysis.ipynb  analysis_results.pkl  auto-interp.ipynb  batch-eval.py  clip-sae-laion.ipynb  embedding-generation.ipynb  environments.txt  eval-semanticity.ipynb  experiment-mnist-sae.ipynb  hypothesis-testing.ipynb  hypothesis.py  learning.py  log.txt  main.py  mnist-sae-messy.ipynb  mnist-sae.ipynb  neuron_label_counts_FashionMNIST_depth_1.csv  neuron_label_counts_FashionMNIST_depth_2.csv  neuron_label_counts_FashionMNIST_depth_3.csv  neuron_label_counts_FashionMNIST_depth_4.csv  neuron_label_counts_FashionMNIST_depth_5.csv  neuron_label_counts_FashionMNIST_depth_6.csv  neuron_label_counts_FashionMNIST_depth_7.csv  neuron_label_counts_depth_1.csv  neuron_label_counts_depth_2.csv  neuron_label_counts_depth_3.csv  neuron_label_counts_depth_4.csv  neuron_label_counts_depth_5.csv  neuron_label_counts_depth_6.csv  neuron_trends.csv  plan.md  prisma-sae.ipynb  pyproject.toml  requirements.txt  sae-eval.ipynb  sota-mnist.py  test-api.py  train-sae.ipynb  (+1 more)
docs/: MNIST_results.csv  metrics.md
docs/hidden_dim_32/: META_SAE_results.csv  SAE_results.csv
models/: colored_mnist_model.pth  mnist-colored_sae_MNIST_fc2_depth_1.pth  mnist_colored.pth  mnist_model.pth  mnist_sae_d1.pth
notebooks/concept/: analyze.ipynb  concept_names.csv  vit_depth2_labels.csv
notebooks/laion/: analysis.ipynb  delete.sh  experiment.ipynb  explore-latents.ipynb  laion-api.py
structs/: api.py  dataloaders.py  models.py  probes.py  utils.py
(+16099 files in other folders)
